--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,7 @@ SET( OpenCV_FOUND TRUE )
 SET(Source
     src/main.cpp
     src/util.cpp
+    src/labeler.cpp
     )
 find_package(OpenCV REQUIRED)
 add_executable(testas ${Source})
